@@ -1,3 +1,8 @@
+2007-02-18  Dalibor Topic  <robilad@kaffe.org>
+
+	* pushback.h (pb_read): Added documentation.
+	* pushback.c: Added myself to authors.
+
 2007-02-15  Dalibor Topic  <robilad@kaffe.org>
 
 	* pushback.c (pb_read): Exit if read fails.
